# firebird_counter

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bench/: README.md  __init__.py  benchmark_report_2026-06-06.md  benchmark_report_2026-06-09.md  benchmark_report_2026-06-09_plugin_profiles.md  generate_sql.py  run_benchmark.py
build-firebird/: CMakeCache.txt  Makefile  cmake_install.cmake
configs/: fbtrace.conf.sample  firebird.conf.sample  plugins.conf.sample  proc_usage_plugin.conf.sample  python_service.json
cpp/include/proc_usage/: collector.hpp  config.hpp  firebird_bridge.hpp  spool_writer.hpp
cpp/src/: collector.cpp  config.cpp  firebird_bridge.cpp  plugin_entry.cpp  spool_writer.cpp
packaging/rpm/: firebird-proc-usage.spec  proc-usage.service  proc_usage_plugin.conf  python_service.json
proc_usage/: __init__.py  __main__.py  cli.py  config.py  service.py  spool.py  storage.py
tests/: test_benchmark.py  test_cli.py  test_service.py  test_storage.py
